<resources>
    <string name="app_name">Travel Journal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Smadici Denis-Constantin</string>
    <string name="nav_header_subtitle">smadici.denis@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="about_header">This application was made by Smadici Denis</string>

    <string name="contact_info">If you have questions or just want to get in touch, use the form below. We look forward to hearing from you</string>
    <string name="contact_name">Your name</string>
    <string name="contact_email">Your email</string>
    <string name="contact_message">Message</string>
    <string name="contact_submit">Submit</string>
    <string name="contact_error_name_empty">The name cannot be empty!</string>
    <string name="contact_error_email_empty">The email cannot be empty!</string>
    <string name="contact_error_email_valid">The email is not valid!</string>

    <string name="add_trip_name">Trip Name</string>
    <string name="add_trip_destination">Destination</string>
    <string name="add_trip_type_city_break">City Break</string>
    <string name="add_trip_type_sea">Sea Side</string>
    <string name="add_trip_type_mountains">Mountains</string>
    <string name="add_trip_type">Trip Type:</string>
    <string name="add_trip_start_date">Start Date</string>
    <string name="add_trip_end_date">End Date</string>
    <string name="add_rating">Rating: </string>
    <string name="add_save">Save</string>
    <string name="add_price">Price (EUR) : </string>
    <string name="add_name_error">The name cannot be empty!</string>
    <string name="add_destination_error">The destination cannot be empty!</string>

    <string name="trip_details_title">Trip details</string>

    <string name="menu_home">Home</string>
    <string name="menu_about">About Us</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_share">Share</string>

    <string name="about_version">Version 0.10</string>
</resources>