<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_input_layout_trip_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:errorEnabled="true"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_input_text_trip_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_trip_name"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_input_layout_trip_destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/add_input_layout_trip_name"
        tools:layout_editor_absoluteX="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_input_text_destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_trip_destination"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/add_text_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_trip_type"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/add_input_layout_trip_destination"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:checkedButton="@id/add_radio_city_break"
        app:layout_constraintTop_toBottomOf="@+id/add_text_type"
        tools:layout_editor_absoluteX="10dp">

        <RadioButton
            android:id="@+id/add_radio_city_break"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_trip_type_city_break"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/add_radio_sea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_trip_type_sea"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/add_radio_mountains"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_trip_type_mountains"
            android:textSize="18sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/add_text_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        tools:text="Price (EUR) :"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"/>

    <SeekBar
        android:id="@+id/add_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/add_text_cost"
        android:layout_margin="10dp"
        android:max="1000"
        android:progress="500"/>

    <EditText
        android:id="@+id/add_start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="false"
        android:editable="false"
        android:hint="@string/add_trip_start_date"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toBottomOf="@+id/add_price"/>

    <EditText
        android:id="@+id/add_end_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="false"
        android:editable="false"
        android:hint="@string/add_trip_end_date"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toBottomOf="@+id/add_start_date"/>

    <TextView
        android:id="@+id/add_text_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_rating"
        android:textSize="18sp"
        android:layout_marginStart="15dp"
        android:paddingTop="-8dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toBottomOf="@+id/add_end_date"/>

    <RatingBar
        android:id="@+id/add_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="-10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_text_rating"
        android:rating="2.5"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/add_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/add_save"
        app:layout_constraintTop_toBottomOf="@+id/add_rating" />
</androidx.constraintlayout.widget.ConstraintLayout>